Using index.html

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,6 @@
 idf_component_register(SRCS "main.c"
-                    INCLUDE_DIRS ".")
+                    INCLUDE_DIRS "."
+                    EMBED_FILES index.html
+                    )
+
+# target_add_binary_data(${COMPONENT_LIB} "index.html" BINARY)
