--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,6 +1,4 @@
 idf_component_register(SRCS "main.c"
                     INCLUDE_DIRS "."
-                    EMBED_FILES index.html
+                    EMBED_FILES index.html favicon.ico
                     )
-
-# target_add_binary_data(${COMPONENT_LIB} "index.html" BINARY)
